[tool.poetry]
name = "representabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
census = "^0.8.17"
us = "^2.0.2"
xmltodict = "^0.12.0"
tweepy = "^3.10.0"
google-cloud-storage = "^1.38.0"
fsspec = "^2021.5.0"
gcsfs = "^2021.5.0"
python-dotenv = "^0.17.1"
boto3 = "^1.17.98"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
