[tool.poetry]
name = "representabot"
version = "1.0.0"
description = "A Twitter bot that tweets about US Senate votes"
authors = [
    "Delaney Gomen <delaney.goman@protectdemocracy.org>",
    "Nicholas Tulach <nicholas.tulach@protectdemocracy.org>"
]
license = "MIT"
readme = "README.md"
homepage = "https://protect-democracy.github.io/representabot/"
repository = "https://github.com/protect-democracy/representabot/"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
census = "^0.8.17"
us = "^2.0.2"
xmltodict = "^0.12.0"
tweepy = "^3.10.0"
fsspec = "^2021.5.0"
python-dotenv = "^0.17.1"
boto3 = "^1.17.98"
pre-commit = "^2.13.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
